--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,3 @@
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+.custom-btn-width {
+    width: 150px; /* Set the width to 200 pixels */
+  }
